# chameleon

./: Cargo.toml  README.md  config.toml  install.sh  raft-medium-words.txt
.github/workflows/: build.yml  rust.yml
src/: args.rs  build.rs  decider.rs  http_utils.rs  main.rs  utils.rs
src/utils/: decider.rs
wordlists/: AEM.txt  Apache.txt  ApacheTomcat.txt  ColdFusion.txt  Confluence.txt  Django.txt  Drupal.txt  Flask.txt  Flyspray.txt  GlassFish.txt  Golang.txt  IIS-ASP.txt  Java.txt  Jenkins.txt  Joomla.txt  Kentico.txt  Laravel.txt  Lotus.txt  MODX.txt  Magento.txt  Matomo.txt  OracleAppServer.txt  PHP-Nuke.txt  PHP.txt  RoundCube.txt  SAP.txt  Sharepoint.txt  Sitecore.txt  Sitefinity.txt  Spring.txt  Symfony.txt  Umbraco.txt  Vignette.txt  Wordpress.txt  flask-wordlist.txt  nginx.txt  oracle.txt  raft-medium-words.txt  raft-small-words.txt  ror.txt
