[package]
name = "chameleon"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wappalyzer = { git = "https://github.com/iustin24/wappalyzer?" }
config = "0.13.1"
reqwest = { version = "0.10", default-features = false, features=["rustls-tls"]}
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3"
url = "2.2.2"
rand = "0.8.4"
indicatif = "0.16.2"
colored = "2.0.0"
clap = { version = "3", features = ["derive"]}
anyhow = "1.0.57"
dirs = "4.0.0"