[package]
name = "chameleon"
version = "0.4.0"
edition = "2021"
build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wappalyzer = { git = "https://github.com/iustin24/wappalyzer?" }
config = "0.13.1"
reqwest = { version = "0.11.11", features = ["rustls-tls"] }
tokio = { version = "1.21.0", features = ["full"] }
futures = "0.3.24"
url = "2.2.2"
rand = "0.8.4"
indicatif = "0.16.2"
colored = "2.0.0"
clap = { version = "3", features = ["derive"]}
anyhow = "1.0.57"
dirs = "4.0.0"
feroxfuzz = "0.1.0-rc.0"
itertools = "0.10.3"