[package]
name = "chameleon"
version = "1.1.0"
edition = "2021"
build = "src/build.rs"
resolver = "1"
authors = ["youstin"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

openssl = { version = "0.10.40", features = ["vendored"] }
wappalyzer = { git = "https://github.com/iustin24/wappalyzer" }
config = "0.13.1"
reqwest = { version = "0.11.11" }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.24"
url = "2.2.2"
rand = "0.8.4"
indicatif = "0.16.2"
colored = "2.0.0"
clap = { version = "3", features = ["derive"]}
anyhow = "1.0.57"
dirs = "4.0.0"
feroxfuzz = { git = "https://github.com/iustin24/feroxfuzz", branch = "master"}
itertools = "0.10.3"
serde = "1.0.144"
typetag = { version = "0.2.3" }
serde_json = "1.0.87"
